force-app/main/default/objects/KimbleOne__Task__c/fields/KimbleOne__DisplaySequence__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DisplaySequence__c</fullName>
    <defaultValue>10</defaultValue>
    <label>DisplaySequence</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>