force-app/main/default/objects/KimbleOne__Task__c/fields/KimbleOne__ExpendedCost__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExpendedCost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Expended Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>