force-app/main/default/objects/KimbleOne__Task__c/fields/KimbleOne__ExpendedEffort__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExpendedEffort__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Expended Effort</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>