force-app/main/default/objects/KimbleOne__Task__c/fields/KimbleOne__ExternalIdURL__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExternalIdURL__c</fullName>
    <label>External Id URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>