force-app/main/default/objects/KimbleOne__Task__c/fields/KimbleOne__ExternalTaskId__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExternalTaskId__c</fullName>
    <label>MSP Task Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>