force-app/main/default/objects/KimbleOne__Task__c/fields/KimbleOne__ForecastCost__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ForecastCost__c</fullName>
    <formula>KimbleOne__ExpendedCost__c +  KimbleOne__RemainingCost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>