force-app/main/default/objects/KimbleOne__Task__c/fields/KimbleOne__ForecastEffort__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ForecastEffort__c</fullName>
    <formula>KimbleOne__ExpendedEffort__c +  KimbleOne__RemainingEffort__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Effort</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>