force-app/main/default/objects/KimbleOne__Task__c/fields/KimbleOne__ForecastRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ForecastRevenue__c</fullName>
    <formula>KimbleOne__ExpendedRevenue__c +  KimbleOne__RemainingRevenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>