force-app/main/default/objects/KimbleOne__Task__c/fields/KimbleOne__IsIteration__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsIteration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsIteration</label>
    <type>Checkbox</type>
</CustomField>