force-app/main/default/objects/KimbleOne__Task__c/fields/KimbleOne__IsSummary__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsSummary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSummary</label>
    <type>Checkbox</type>
</CustomField>