force-app/main/default/objects/KimbleOne__Task__c/fields/KimbleOne__RemainingCost__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RemainingCost__c</fullName>
    <label>Remaining Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>