force-app/main/default/objects/KimbleOne__Task__c/fields/KimbleOne__RemainingRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RemainingRevenue__c</fullName>
    <label>Remaining Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>