force-app/main/default/objects/KimbleOne__Task__c/fields/KimbleOne__TaskCategory__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TaskCategory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task Category</label>
    <referenceTo>KimbleOne__TaskCategory__c</referenceTo>
    <relationshipLabel>Tasks</relationshipLabel>
    <relationshipName>Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>