force-app/main/default/objects/KimbleOne__Task__c/fields/KimbleOne__TaskTemplate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TaskTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task Template</label>
    <referenceTo>KimbleOne__TaskTemplate__c</referenceTo>
    <relationshipLabel>Tasks</relationshipLabel>
    <relationshipName>Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>