force-app/main/default/objects/KimbleOne__Task__c/listViews/KimbleOne__All.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__DisplaySequence__c</columns>
    <columns>KimbleOne__BaselineEffort__c</columns>
    <columns>KimbleOne__ExpendedEffort__c</columns>
    <columns>KimbleOne__ForecastEffort__c</columns>
    <columns>KimbleOne__RemainingEffort__c</columns>
    <columns>KimbleOne__IsFixedEffort__c</columns>
    <columns>KimbleOne__IsSummary__c</columns>
    <columns>KimbleOne__TaskCategory__c</columns>
    <columns>KimbleOne__ResourcedActivity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>